first inter collab success

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Hassan</title>
-    </head>
-    <body>
-        
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+
+    <!-- Include CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Include JavaScript -->
+    <script src="script.js"></script>
+</head>
+<body>
+    <!-- Your HTML content goes here -->
+    <h1 id="heading" onclick="a()"> my first heading</h1>
+
+</body>
 </html>
